--- a/Regular/300 J/Group 2/group_list.html
+++ b/Regular/300 J/Group 2/group_list.html
@@ -13,10 +13,10 @@
                 <th colspan="4">Group List</th>
             </tr>
             <tr>
-                <th>Index Number</th>
-                <td>Full Name</td>
-                <td>Email</td>
-                <td>Telephone</td>
+                <th>5201040914</th>
+                <td>Yakubu Abdul-Ganiyu</td>
+                <td>aganiyu0@gmail.com</td>
+                <td>0240079633</td>
             </tr>
         </thead>
         <tbody>
